--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "type": "module",
-  "name": "test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.3",
-    "express-handlebars": "^6.0.3",
-    "express-handlebars-sections": "^1.0.1"
-  }
+    "type": "module",
+    "name": "test",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.3",
+        "express-handlebars": "^6.0.3",
+        "express-handlebars-sections": "^1.0.1"
+    },
+    "engines": {
+        "node:": "16. x "
+    },
+    "scripts": {
+        "start": "node app.js"
+    }
 }
